--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
     </div>
-    <script src="main.js"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
