--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Max Portofolio</title>
     <!-- setup css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <div class="border">
@@ -54,7 +55,7 @@
                 <p><span>visitor</span>@max.desanta:$~</p>
                 <input type="text" id="input-command" name="input-command" autofocus>
             </div>
-        </section>
+        </section> 
     </div>
     <script src="js/main.js" type="module"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
