update keydown dan auto scroll bottom

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     </style>
 </head>
 <body class="bg-primary font-antonio p-5 h-full text-secondary">
-    <section class="profile flex items-start gap-x-8">
+    <section class="profile lg:flex-row flex-col flex items-start lg:gap-x-8">
         <div class="profile-img">
-            <img class="object-cover w-[250px] h-[250px]"" src="assets/profile.jpg" alt="profile-img">
+            <img class="object-cover w-full lg:w-[250px] h-[250px]"" src="assets/profile.jpg" alt="profile-img">
         </div>
-        <div class="profile-text flex flex-col justify-between h-[250px]">
-            <div class="profile-title -mt-4">
-                <h1 class="font-pixelify text-9xl">Max De Santa</h1>
+        <div class="profile-text flex flex-col lg:justify-between lg:h-[250px]">
+            <div class="profile-title lg:-mt-4">
+                <h1 class="font-pixelify text-5xl lg:text-9xl mb-8">Max De Santa</h1>
             </div>
             <div class="profile-skill">
-                <div class="skill-title mb-1.5 text-2xl">
+                <div class="skill-title lg:mb-1.5 mb-1 text-2xl">
                     <h1>Tech used :</h1>
                 </div>
                 <div class="skill-icon">
@@ -75,7 +75,7 @@
         </div>
     </section>
     <section class="desc">
-        <p class="pt-6 pr-28 leading-7">Welcome to my portfolio, where you can explore a showcase of my work and skills. If you're looking for guidance or information, please type "help" to access a list of commands. Additionally, but you can type "clear" to refresh the screen. I hope you enjoy to see my portofolio</p>
+        <p class="pt-6 lg:pr-28 leading-7 text-justify">Welcome to my portfolio, where you can explore a showcase of my work and skills. If you're looking for guidance or information, please type "help" to access a list of commands. Additionally, but you can type "clear" to refresh the screen. I hope you enjoy to see my portofolio</p>
     </section>
     <section class="command">
         <div class="command-output">
